small fix in summary paragraph - made changes to it's gap

--- a/src/index.css
+++ b/src/index.css
@@ -234,7 +234,7 @@ body {
 .summary p {
   display: flex;
   align-items: center;
-  gap: 0.8rem;
+  gap: 4px;
 }
 
 /* ******* */
